feat(presentation): support ticket authentication
Support ticket based authentication for establishing websocket connections.
